[gd_scene load_steps=2 format=3 uid="uid://d3w12dj1f48rj"]

[ext_resource type="Script" path="res://scenes/levels/victory_screen.gd" id="1_rys2i"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rys2i")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="WinLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -60.0
offset_right = 5.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Temps de Victoire : "
horizontal_alignment = 2
vertical_alignment = 1

[node name="WinTimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -60.0
offset_right = 368.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.815686, 1, 0.752941, 1)
theme_override_font_sizes/font_size = 32
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 10.0
offset_right = 5.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Entrez votre nom : "
horizontal_alignment = 2
vertical_alignment = 1

[node name="NameTextEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 14.0
offset_top = 9.0
offset_right = 370.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.815686, 1, 0.752941, 1)
theme_override_font_sizes/font_size = 32

[connection signal="text_submitted" from="NameTextEdit" to="." method="_on_name_text_edit_text_submitted"]
